fix wrapping for tree nodes

--- a/openmetadata-ui/src/main/resources/ui/src/styles/tree.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/tree.less
@@ -55,3 +55,13 @@
 .ant-tree-switcher-icon {
   color: black;
 }
+
+.execution-node-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  overflow-y: hidden;
+}
+
+.execution-node-container::-webkit-scrollbar {
+  display: none;
+}
